New update with new page with useful links for programming learning

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1" >
-  <title>{% block title %}Title{% endblock %}</title>
+    <meta name="viewport" content="width=device-width", initial-scale="1.0" >
+    <title>{% block title %}Title{% endblock %}</title>
     <link rel="stylesheet" href="static/base.css">
+
 </head>
 <body>
 
@@ -19,6 +20,7 @@
                         <li><a id="mpismo" href="/mpismo">Motivaciono pismo</a></li>
                         <li><a id="linkedin" href="/linkedin">Linkedin profil</a></li>
                         <li><a id="youtube" href="/youtube">Youtube profil</a></li>
+                        <li><a id="korisni_linkovi" href="/korisni-linkovi">Korisni linkovi</a></li>
                         </ul>
                     {%else%}
                     <li><a id="home" href="/">Početna stranica</a></li>
