--- a/website/templates/cv.html
+++ b/website/templates/cv.html
@@ -188,6 +188,13 @@
                 </div>
         </div>
         <div class="bottom-border"></div>
+        <p class="work-experience-text">SOFT-SKILLS</p>
+        <div class="work-experience">
+                <div class="explanation2">
+                    <p class="jobs3">Timski rad| Kritičko razmišljanje| Prilagodljivost| Komunikacijske vještine| Kreativnost| Fleksibilnost| Proaktivnost| </p>
+                </div>
+        </div>
+        <div class="bottom-border"></div>
         <p class="work-experience-text">VOZAČKA DOZVOLA</p>
         <div class="work-experience">
             <div class="explanation2">
